라이브러리 설계 구조 개선 작업