@@ -1,35 +1,28 @@
 package com.byeolnaerim.mongodsl.search;
 
+
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import org.bson.Document;
+import com.byeolnaerim.mongodsl.internal.MongoBsonSupport;
+import com.mongodb.client.model.search.SearchHighlight;
+import com.mongodb.client.model.search.SearchPath;
+
 
 /**
- * Stage-level Atlas Search {@code highlight} specification.
- *
- * <p>This type models the {@code highlight} option that lives directly under
- * {@code $search}, not inside a specific operator such as {@code text} or
- * {@code autocomplete}. Use this through {@code SearchBuilder.highlight(...)}
- * and retrieve the rendered highlight result through
- * {@code $meta: "searchHighlights"}.</p>
+ * Stage-level Atlas Search highlight specification backed by MongoDB driver's
+ * {@link SearchHighlight}.
  */
 public final class SearchHighlightSpec {
 
-	private final Object path;
-
-	private final Integer maxCharsToExamine;
-
-	private final Integer maxNumPassages;
+	private final SearchHighlight highlight;
 
 	private SearchHighlightSpec(
-		Object path,
-		Integer maxCharsToExamine,
-		Integer maxNumPassages
+								SearchHighlight highlight
 	) {
 
-		this.path = path;
-		this.maxCharsToExamine = maxCharsToExamine;
-		this.maxNumPassages = maxNumPassages;
+		this.highlight = highlight;
 
 	}
 
@@ -44,6 +37,12 @@ public final class SearchHighlightSpec {
 
 	}
 
+	public SearchHighlight toSearchHighlight() {
+
+		return this.highlight;
+
+	}
+
 	/**
 	 * Renders this highlight specification into an Atlas Search document.
 	 *
@@ -51,92 +50,122 @@ public final class SearchHighlightSpec {
 	 */
 	public Document toDocument() {
 
-		Document document = new Document( "path", this.path );
-
-		if (this.maxCharsToExamine != null) {
-			document.append( "maxCharsToExamine", this.maxCharsToExamine );
-
-		}
-
-		if (this.maxNumPassages != null) {
-			document.append( "maxNumPassages", this.maxNumPassages );
-
-		}
-
-		return document;
+		return MongoBsonSupport.toDocument( this.highlight );
 
 	}
 
-	/**
-	 * Fluent builder for Atlas Search highlight options.
-	 */
 	public static final class Builder {
 
-		private Object path;
+		private List<SearchPath> paths;
 
 		private Integer maxCharsToExamine;
 
 		private Integer maxNumPassages;
 
-		/**
-		 * Sets a single highlight path.
-		 *
-		 * @param path
-		 *            the logical path input
-		 * @param <K>
-		 *            the logical path type
-		 *
-		 * @return this builder
-		 */
-		public <K> Builder path(
-			K path
+		public Builder path(
+			String path
 		) {
 
-			this.path = SearchPathResolver.resolve( path );
+			this.paths = List.of( SearchPathResolver.resolveSearchPath( path ) );
 			return this;
 
 		}
 
-		/**
-		 * Sets multiple highlight paths.
-		 *
-		 * @param paths
-		 *            the logical path inputs
-		 * @param <K>
-		 *            the logical path type
-		 *
-		 * @return this builder
-		 */
-		public <K> Builder paths(
-			Collection<K> paths
+		public Builder path(
+			Enum<?> path
 		) {
 
-			this.path = SearchPathResolver.resolveAll( paths );
+			this.paths = List.of( SearchPathResolver.resolveSearchPath( path ) );
 			return this;
 
 		}
 
-		/**
-		 * Convenience overload for multiple highlight paths.
-		 *
-		 * @param paths
-		 *            the logical path inputs
-		 * @param <K>
-		 *            the logical path type
-		 *
-		 * @return this builder
-		 */
-		@SafeVarargs
-		public final <K> Builder paths(
-			K... paths
+		public Builder path(
+			SearchPath path
 		) {
 
-			if (paths == null || paths.length == 0) {
-				throw new IllegalArgumentException( "paths must not be empty" );
+			this.paths = List.of( SearchPathResolver.resolveSearchPath( path ) );
+			return this;
 
-			}
+		}
 
-			return paths( Arrays.asList( paths ) );
+		/** Fallback for custom path wrappers. */
+		public Builder path(
+			Object path
+		) {
+
+			this.paths = List.of( SearchPathResolver.resolveSearchPath( path ) );
+			return this;
+
+		}
+
+		public Builder paths(
+			String path, String... paths
+		) {
+
+			return paths(
+				java.util.stream.Stream
+					.concat(
+						java.util.stream.Stream.of( path ),
+						Arrays.stream( paths )
+					)
+					.toList()
+			);
+
+		}
+
+		public Builder paths(
+			Enum<?> path, Enum<?>... paths
+		) {
+
+			return paths(
+				java.util.stream.Stream
+					.concat(
+						java.util.stream.Stream.of( path ),
+						Arrays.stream( paths )
+					)
+					.toList()
+			);
+
+		}
+
+		public Builder paths(
+			SearchPath path, SearchPath... paths
+		) {
+
+			return paths(
+				java.util.stream.Stream
+					.concat(
+						java.util.stream.Stream.of( path ),
+						Arrays.stream( paths )
+					)
+					.toList()
+			);
+
+		}
+
+		/** Fallback for mixed/custom path wrappers. */
+		public Builder paths(
+			Object path, Object... paths
+		) {
+
+			return paths(
+				java.util.stream.Stream
+					.concat(
+						java.util.stream.Stream.of( path ),
+						Arrays.stream( paths )
+					)
+					.toList()
+			);
+
+		}
+
+		public Builder paths(
+			Collection<?> paths
+		) {
+
+			this.paths = SearchPathResolver.resolveSearchPaths( paths );
+			return this;
 
 		}
 
@@ -152,10 +181,7 @@ public final class SearchHighlightSpec {
 			int maxCharsToExamine
 		) {
 
-			if (maxCharsToExamine <= 0) {
-				throw new IllegalArgumentException( "maxCharsToExamine must be > 0" );
-
-			}
+			if (maxCharsToExamine <= 0) { throw new IllegalArgumentException( "maxCharsToExamine must be > 0" ); }
 
 			this.maxCharsToExamine = maxCharsToExamine;
 			return this;
@@ -174,10 +200,7 @@ public final class SearchHighlightSpec {
 			int maxNumPassages
 		) {
 
-			if (maxNumPassages <= 0) {
-				throw new IllegalArgumentException( "maxNumPassages must be > 0" );
-
-			}
+			if (maxNumPassages <= 0) { throw new IllegalArgumentException( "maxNumPassages must be > 0" ); }
 
 			this.maxNumPassages = maxNumPassages;
 			return this;
@@ -191,16 +214,21 @@ public final class SearchHighlightSpec {
 		 */
 		public SearchHighlightSpec build() {
 
-			if (this.path == null) {
-				throw new IllegalStateException( "highlight.path is required" );
+			if (this.paths == null || this.paths.isEmpty()) { throw new IllegalStateException( "highlight.path is required" ); }
+
+			SearchHighlight highlight = SearchHighlight.paths( this.paths );
+
+			if (this.maxCharsToExamine != null) {
+				highlight = highlight.maxCharsToExamine( this.maxCharsToExamine );
 
 			}
 
-			return new SearchHighlightSpec(
-				this.path,
-				this.maxCharsToExamine,
-				this.maxNumPassages
-			);
+			if (this.maxNumPassages != null) {
+				highlight = highlight.maxNumPassages( this.maxNumPassages );
+
+			}
+
+			return new SearchHighlightSpec( highlight );
 
 		}
 
